--- a/html/listing.html
+++ b/html/listing.html
@@ -134,13 +134,25 @@
                 <div class="banner">
                     <img src="assets/image/listingImage/urban_art_banner.png" alt="none">
                 </div>
-                <div class="wrap">
+                <!-- <div class="wrap">
                     <div class="card">
                         <div class="cover">
                             <h1 id="first"><img src="assets/image/listingImage/listing_bg_picture1.png" alt="none"></h1>
                         </div>
                         <div class="back">
                             <p>Beauty is everywhere.</p>
+                        </div>
+                    </div>
+                </div> -->
+                <div class="card">
+                    <div class="card_inner">
+                        <div class="card_face card_face--front">
+                            <img src="assets/image/listingImage/listing_bg_picture1.png" alt="none">
+                        </div>
+                        <div class="card_face card_face--back">
+                                <div class="card_body">
+                                    <h3>Beauty is everywhere!</h3>
+                                </div>
                         </div>
                     </div>
                 </div>
@@ -457,6 +469,15 @@
         $(".option").click(function(){
             $(".option").removeClass("active");
             $(this).addClass("active");
+        });
+    </script>
+
+    <!-- flipClick -->
+    <script>
+        const card = document.querySelector(".card_inner");
+
+        card.addEventListener("click", function (e) {
+        card.classList.toggle('is-flipped');
         });
     </script>
 
