--- a/html/3dSurroundView.html
+++ b/html/3dSurroundView.html
@@ -113,7 +113,7 @@
             </section>
             <section class="profilePicture">
                 <section class="img characterAdjustment_box"><img class="characterAdjustment" src="https://fakeimg.pl/200/394897/fff" alt="頭像"></section>
-                <section title="此圖示為客製話人物的虛擬意象，請至客製化人物燈箱修改"><i class="fas fa-question"></i></section>
+                <section class="promptWindow-main"><div class="promptWindow"></div><i class="fas fa-question"></i></section>
             </section>
         </main>
     </section>
@@ -133,32 +133,41 @@
                     <section class="graphics">
                         <section class="love"><i class="bi bi-heart"></i> <span>75</span></section>
                         <section class="img"><img src="https://fakeimg.pl/300x250/394897/fff" alt="拍攝商品圖"></section>
-                        <h4>奶茶弟弟的超級肉肉</h4>
                     </section>
                     <section class="bid">
-                        <p class="information">
-                            <span>$30,000</span>
-                            <span class="time small">剩餘2小時47分17秒</span>
-                        </p>
-                        <button class="round round3dBtn" type="button">我要競標</button>
+                        <p>第人道臺葉小天體其識檢重論大除飛構從量我早正快本正第人道臺葉小天體其識檢重論大除飛構從量我早正快本正第人道臺葉小天體其識檢重論大除飛構從量我早正快本正第人道臺葉小天體其識檢重論大除飛構從量我早正快本正</p>
+                        <section class="information">
+                            <section>
+                                <p>$30,000</p>
+                            </section>
+                            <section class="timeAndButton">
+                                <span class="time">剩餘2小時47分17秒</span>
+                                <button class="round round3dBtn" type="button">前往商品頁面</button>
+                            </section>
+                        </section>
+
                     </section>
                 </section>
                 <section class="commodity">
                     <section class="graphics">
                         <section class="love"><i class="bi bi-heart"></i> <span>75</span></section>
                         <section class="img"><img src="https://fakeimg.pl/300x250/394897/fff" alt="拍攝商品圖"></section>
-                        <h4>珍珠妹妹的無敵雞腿</h4>
                     </section>
                     <section class="bid">
-                        <p class="information">
-                            <span>$30,000</span>
-                            <span class="time small">剩餘2小時47分17秒</span>
-                        </p>
-                        <button class="round round3dBtn" type="button">我要競標</button>
+                        <p>第人道臺葉小天體其識檢重論大除飛構從量我早正快本正第人道臺葉小天體其識檢重論大除飛構從量我早正快本正第人道臺葉小天體其識檢重論大除飛構從量我早正快本正第人道臺葉小天體其識檢重論大除飛構從量我早正快本正</p>
+                        <section class="information">
+                            <section>
+                                <p>$30,000</p>
+                            </section>
+                            <section class="timeAndButton">
+                                <span class="time">剩餘2小時47分17秒</span>
+                                <button class="round round3dBtn" type="button">前往商品頁面</button>
+                            </section>
+                        </section>
+
                     </section>
                 </section>
             </section>
-
         </main>
     </section>
     <!--燈箱的消費紀錄-->
@@ -259,7 +268,7 @@
                         <section class="controller"><span class="circle styleRound"></span><span class="circle styleRound"></span><span class="circle styleRound"></span></section>
                         -->
                     </section>
-                    <section class="adjust">
+                    <section class="adjust mask">
                         <!--
                         <section>
                             <p>性別：<input class="checkbox" disabled type="checkbox" onclick="return chk(this)" checked></input>男<input class="checkbox" disabled type="checkbox" onclick="return chk(this)"></input>女</p>
