--- a/html/listing.html
+++ b/html/listing.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 頁面css -->
-    <link rel="stylesheet" href="sass/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <!-- 貓頭鷹css -->
     <link rel="stylesheet" href="assets/owlCss/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/owlCss/owl.theme.default.min.css">
@@ -148,12 +148,12 @@
                 <!-- 方塊收起按鈕 -->
                 <button id="cubeBtn" class="round">點我</button>
                 <div class="cube">
-                    <div class="top"><img src="../assets/image/listingImage/mona_lisa_ps.png" alt="none"></div>
+                    <div class="top"><img src="assets/image/listingImage/mona_lisa_ps.png" alt="none"></div>
                     <div>
-                        <span class="cubeSide"style="--i:0"><img src="../assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
-                        <span class="cubeSide"style="--i:1"><img src="../assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
-                        <span class="cubeSide"style="--i:2"><img src="../assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
-                        <span class="cubeSide"style="--i:3"><img src="../assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
+                        <span class="cubeSide"style="--i:0"><img src="assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
+                        <span class="cubeSide"style="--i:1"><img src="assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
+                        <span class="cubeSide"style="--i:2"><img src="assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
+                        <span class="cubeSide"style="--i:3"><img src="assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
                     </div>
                 </div>
                 </div>
