--- a/html/3dSurroundView.html
+++ b/html/3dSurroundView.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--共用-->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="sass/style.css">
     <!-- <link rel="stylesheet" href="assets/css/uiSet.css">
     <link rel="stylesheet" href="assets/css/component.css">
     <link rel="stylesheet" href="assets/css/buttonStyle.css"> -->
