--- a/html/login.html
+++ b/html/login.html
@@ -36,19 +36,20 @@
                             <label for="addMemPswAgain">確認密碼</label>
                             <input type="password" placeholder="＊＊＊＊"  id="addMemPswAgain" v-model="addMemPswAgain">
                             <label for="email">信箱</label>
-                            <input type="email" placeholder="ArtTogether@gmail.com"  id="email" >
-                            <input type="button" value="下一頁" class="roundOutline" @click="registerWatch()">
+                            <input type="email" placeholder="ArtTogether@gmail.com"  id="email" v-model="emailText">
+                            <input type="button" value="下一頁" class="roundOutline" @click="registerWatch">
                         </div>
+                        
                         <div>
                             <label for="memName">姓名</label>
-                            <input type="text" placeholder="藝起"  id="memName" readonly>
+                            <input type="text" placeholder="藝起"  id="memName" readonly v-model="nameText">
                             <label for="memTel">電話</label>
-                            <input type="tel" placeholder="0900000000"  id="memTel" readonly>
+                            <input type="tel" placeholder="0900000000"  id="memTel" readonly v-model="telText">
                             <label for="memAddress">地址</label>
-                            <input type="password" placeholder="桃園市中壢區復興路46號9樓"  id="memAddress" readonly>
+                            <input type="password" placeholder="桃園市中壢區復興路46號9樓"  id="memAddress" readonly v-model="addressText">
                             <div>
                                 <input type="button" value="上一頁" class="roundOutline" @click="registerChange = !registerChange">
-                                <input type="button" value="註冊" class="round">
+                                <input type="button" value="註冊" class="round" @click="registerWatch">
                             </div>
                         </div>
                     </div>
@@ -80,6 +81,10 @@
                 addMemId:'',
                 addMemPsw:'', 
                 addMemPswAgain:'',
+                emailText:'',
+                telText:'',
+                nameText:'',
+                addressText:'',
             },
             methods: {  //函數大部份放在這!
                 registerWatch(){
@@ -89,6 +94,18 @@
                         alert('密碼字數不得小於8個字')
                     }else if(this.addMemPsw != this.addMemPswAgain){
                         alert('輸入密碼不相符')
+                    }else if(!/^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/.test(this.emailText)){
+                        alert('請確認信箱格式')
+                    }else if(!this.registerChange){
+                        this.registerChange = !this.registerChange
+                    }else if(/\D/.test(this.telText)){
+                        alert('請確認電話格式')
+                    }else if(!this.nameText){
+                        alert('請輸入姓名')
+                    }else if(!this.addressText){
+                        alert('請輸入地址')
+                    }else{
+                        
                     }
                     // registerChange = !registerChange
                 }
