--- a/html/about.html
+++ b/html/about.html
@@ -147,7 +147,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="page"></div>
+                <div class="page">
+                    <div class="pic">
+                        <img src="../assets/image/about_flipBook_about.jpg" alt="">
+                    </div>
+                </div>
                 <div class="page pageCover"></div>
             </div>
         </section>
