--- a/html/3dSurroundView.html
+++ b/html/3dSurroundView.html
@@ -114,7 +114,8 @@
             </section>
             <section class="profilePicture">
                 <section class="img characterAdjustment_box"><img class="characterAdjustment" src="https://fakeimg.pl/200/394897/fff" alt="頭像"></section>
-                <section class="promptWindow-main"><div class="promptWindow"></div><i class="fas fa-question"></i></section>
+                <section class="promptWindow-main">
+                    <div class="promptWindow"></div><i class="fas fa-question"></i></section>
             </section>
         </main>
     </section>
