關於我們修改

--- a/html/about.html
+++ b/html/about.html
@@ -149,7 +149,7 @@
                 </div>
                 <div class="page">
                     <div class="pic">
-                        <img src="../assets/image/about_flipBook_about.jpg" alt="">
+                        <img src="../assets/image/articleAll_sculptHead.jpg" alt="">
                     </div>
                 </div>
                 <div class="page pageCover"></div>
@@ -289,16 +289,22 @@
                     <div class="pageContent">
                         <div class="pic">
                             <img src="../assets/image/logo_cooperate.png" alt="logo">
+                            <img src="../assets/image/logo_cooperate.png" alt="logo">
                         </div>
                     </div>
                 </div>
-                <div class="page"></div>
+                <div class="page">
+                    <div class="pic">
+                        <img src="../assets/image/logo_cooperate.png" alt="logo">
+                        <img src="../assets/image/logo_cooperate.png" alt="logo">
+                        <img src="../assets/image/logo_cooperate.png" alt="logo">
+                    </div>
+                </div>
                 <div class="page pageCover"></div>
             </div>
         </section>
-        <div class="backToTop" id="backToTop">
-            <a onclick="topFunction()" id="BackToTopBtn">
-                <i class="fas fa-chevron-up"></i>
+        <div class="backToTop size backToTopNone" id="backToTop">
+            <a onclick="topFunction()" id="backToTopBtn">
                 <p>TOP</p>
             </a>
         </div>
