--- a/html/listing.html
+++ b/html/listing.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 頁面css -->
-    <link rel="stylesheet" href="sass/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <!-- 貓頭鷹css -->
     <link rel="stylesheet" href="assets/owlCss/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/owlCss/owl.theme.default.min.css">
