--- a/html/homePage.html
+++ b/html/homePage.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="js/vue/vue.min.js"></script>
     <script src="js/supportPage.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.26.1/axios.min.js"></script>
 </head>
 <body>
     <!-- <span class="cursor"></span> -->
