登入初版 取用資料memData.  頁面路徑修正

--- a/html/about.html
+++ b/html/about.html
@@ -8,12 +8,20 @@
     <!-- 頁籤icon -->
     <link rel="icon" href="assets/icon/a_icon.ico" type="art together icon">
     <!-- OwlCarousel -->
-    <link rel="stylesheet" href="../assets/owlCss/owl.carousel.min.css">
-    <link rel="stylesheet" href="../assets/owlCss/owl.theme.default.min.css">
+    <link rel="stylesheet" href="assets/owlCss/owl.carousel.min.css">
+    <link rel="stylesheet" href="assets/owlCss/owl.theme.default.min.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <!-- css -->
     <link rel="stylesheet" href="assets/css/style.css">
+     <!-- 登入  -->
+     <script src="js/loginCheck.js"></script>
+     <script >
+         window.addEventListener('load',function(){
+             loginCheck(false);
+         })
+     </script>
+     <!-- 登入ＥＮＤ  -->
 </head>
 <body>
     <!-- 關於我們_頁首區域 -->
@@ -138,18 +146,18 @@
                     </div>
                     <div class="pageContent">
                         <div class="pic">
-                            <img src="../assets/image/about_flipBook_about.jpg" alt="">
+                            <img src="assets/image/about_flipBook_about.jpg" alt="">
                         </div>
                         <div class="pageContentTxt">
                             <p>藝起成立於2022年，為虛構網站。<br>本網站為緯育Tibame前端設計工程師班專題作業，本平台僅供學習、展示之用。<br><br>致力於提供各式創作藝術者一個展示作品的環境，建構享受潮流藝術的視覺饗宴，提倡藝術潮流的鑑賞；期待在藝術與收益之中取得平衡，媒合消費者與創作者，打造安全、安心、透明的交易平台，並持續推廣藝術創作。</p>
                             <hr>
-                            <img src="../assets/image/all_logo.png" alt="logo" class="pageContentLogo">
+                            <img src="assets/image/all_logo.png" alt="logo" class="pageContentLogo">
                         </div>
                     </div>
                 </div>
                 <div class="page">
                     <div class="pic">
-                        <img src="../assets/image/articleAll_sculptHead.jpg" alt="">
+                        <img src="assets/image/articleAll_sculptHead.jpg" alt="">
                     </div>
                 </div>
                 <div class="page pageCover"></div>
@@ -288,16 +296,16 @@
                     </div>
                     <div class="pageContent">
                         <div class="pic">
-                            <img src="../assets/image/logo_cooperate.png" alt="logo">
-                            <img src="../assets/image/logo_cooperate.png" alt="logo">
+                            <img src="assets/image/logo_cooperate.png" alt="logo">
+                            <img src="assets/image/logo_cooperate.png" alt="logo">
                         </div>
                     </div>
                 </div>
                 <div class="page">
                     <div class="pic">
-                        <img src="../assets/image/logo_cooperate.png" alt="logo">
-                        <img src="../assets/image/logo_cooperate.png" alt="logo">
-                        <img src="../assets/image/logo_cooperate.png" alt="logo">
+                        <img src="assets/image/logo_cooperate.png" alt="logo">
+                        <img src="assets/image/logo_cooperate.png" alt="logo">
+                        <img src="assets/image/logo_cooperate.png" alt="logo">
                     </div>
                 </div>
                 <div class="page pageCover"></div>
