--- a/html/homePage.html
+++ b/html/homePage.html
@@ -12,6 +12,14 @@
     <script src="js/vue/vue.min.js"></script>
     <script src="js/supportPage.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.26.1/axios.min.js"></script>
+    <!-- 登入  -->
+    <script src="js/loginCheck.js"></script>
+    <script >
+        window.addEventListener('load',function(){
+            loginCheck(false);
+        })
+    </script>
+    <!-- 登入ＥＮＤ  -->
 </head>
 <body>
     <!-- <span class="cursor"></span> -->
