--- a/html/productSingle.html
+++ b/html/productSingle.html
@@ -11,6 +11,14 @@
     <script src="js/vue/vue.js" defer></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js" defer></script>
     <script src="js/productItem.js" defer></script>
+    <!-- 登入  -->
+    <script src="js/loginCheck.js"></script>
+    <script >
+        window.addEventListener('load',function(){
+            loginCheck(false);
+        })
+    </script>
+    <!-- 登入ＥＮＤ  -->
 </head>
 <body>
 <!-- 商品單頁_頁首區域 -->
