--- a/html/prouductAll.html
+++ b/html/prouductAll.html
@@ -12,6 +12,14 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js" defer></script>
     <link rel="icon" href="assets/icon/a_icon.ico" type="art together icon">
     <script src="js/product.js" defer></script>
+    <!-- 登入  -->
+    <script src="js/loginCheck.js"></script>
+    <script >
+        window.addEventListener('load',function(){
+            loginCheck(false);
+        })
+    </script>
+    <!-- 登入ＥＮＤ  -->
 </head>
 <body>
     <!-- 許瑀芹 -->
