--- a/html/3dSurroundView.html
+++ b/html/3dSurroundView.html
@@ -31,6 +31,14 @@
     <title>會員中心</title>
     <!-- 頁籤icon -->
     <link rel="icon" href="assets/icon/a_icon.ico" type="art together icon">
+     <!-- 登入  -->
+     <script src="js/loginCheck.js"></script>
+     <script >
+         window.addEventListener('load',function(){
+             loginCheck(false);
+         })
+     </script>
+     <!-- 登入ＥＮＤ  -->
 </head>
 
 <body>
