--- a/html/articlePage.html
+++ b/html/articlePage.html
@@ -12,6 +12,14 @@
     <script src="js/articlePage.js"></script>
     <!-- 跳窗套件 -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <!-- 登入  -->
+    <script src="js/loginCheck.js"></script>
+    <script >
+        window.addEventListener('load',function(){
+            loginCheck(false);
+        })
+    </script>
+    <!-- 登入ＥＮＤ  -->
 </head>
 <body>
     <!-- 主標32px letter-spacing:-0.512px line-height:40px
