--- a/html/articlePost.html
+++ b/html/articlePost.html
@@ -10,6 +10,14 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="js/vue/vue.js"></script>
     <script src="js/articlePost.js"></script>
+      <!-- 登入  -->
+      <script src="js/loginCheck.js"></script>
+      <script >
+          window.addEventListener('load',function(){
+              loginCheck(false);
+          })
+      </script>
+      <!-- 登入ＥＮＤ  -->
 </head>
 <body>
     <!-- @@include('layout/header.html') -->
