--- a/html/customCharacter.html
+++ b/html/customCharacter.html
@@ -10,6 +10,14 @@
     <link rel="stylesheet" href="assets\css\style.css">
     <script src="https://kit.fontawesome.com/90d222f595.js" crossorigin="anonymous"></script>
     <title>Document</title>
+      <!-- 登入  -->
+      <script src="js/loginCheck.js"></script>
+      <script >
+          window.addEventListener('load',function(){
+              loginCheck(false);
+          })
+      </script>
+      <!-- 登入ＥＮＤ  -->
 </head>
 <body>
     <button class="button bouncingButton">按鈕</button>
