--- a/html/galleryDoor.html
+++ b/html/galleryDoor.html
@@ -10,6 +10,14 @@
     <!-- galleryDoor.css -->
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/galleryDoor.css">
+    <!-- 登入  -->
+    <script src="js/loginCheck.js"></script>
+    <script >
+        window.addEventListener('load',function(){
+            loginCheck(false);
+        })
+    </script>
+    <!-- 登入ＥＮＤ  -->
 </head>
 <body>
     <div class="galleryDoorWrap">
