--- a/html/listing.html
+++ b/html/listing.html
@@ -21,13 +21,21 @@
     <link rel="icon" href="assets/icon/a_icon.ico" type="art together icon">
     <title>商品上架</title>
         <!-- 方塊收起按鈕 -->
-        <script>
-            $(function () {
-                $(`#cubeBtn`).click(function(){
-                    $('.cubeSide').slideToggle();
-                });
+    <script>
+        $(function () {
+            $(`#cubeBtn`).click(function(){
+                $('.cubeSide').slideToggle();
             });
-        </script>
+        });
+    </script>
+    <!-- 登入  -->
+    <script src="js/loginCheck.js"></script>
+    <script >
+        window.addEventListener('load',function(){
+            loginCheck(false);
+        })
+    </script>
+    <!-- 登入ＥＮＤ  -->
 </head>
 <body>
 
